--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="se.lanzen.LunchToday"
-      android:versionCode="1"
-      android:versionName="1.0">
+      android:versionCode="1" android:versionName="@string/version">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".ShowResturantsActivity"
                   android:label="@string/app_name">
@@ -11,6 +10,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="AboutActivity" android:label="Om @string/app_name"></activity>
 
     </application>
 	<uses-permission android:name="android.permission.INTERNET" />
