--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,10 +10,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="AboutActivity" android:label="Om @string/app_name"></activity>
+        <activity android:name=".AboutActivity" 
+        		  android:label="@string/app_name">
+        </activity>
 
     </application>
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-sdk android:targetSdkVersion="4" android:minSdkVersion="4"></uses-sdk>
 
 
 </manifest>
