--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="se.lanzen.LunchToday"
       android:versionCode="2" android:versionName="@string/version">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/dagens_lunch" android:label="@string/app_name">
         <activity android:name=".ShowResturantsActivity"
                   android:label="@string/app_name">
             <intent-filter>
