--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,9 @@
         <activity android:name=".AboutActivity" 
         		  android:label="@string/app_name">
         </activity>
+        <activity android:name=".AppPreference" 
+        		  android:label="@string/app_name">
+        </activity>
 
     </application>
 	<uses-permission android:name="android.permission.INTERNET" />
