--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,6 +16,9 @@
         <activity android:name=".AppPreference" 
         		  android:label="@string/app_name">
         </activity>
+        <activity android:name=".PrefAreaActivity" 
+        		  android:label="@string/app_name">
+        </activity>
 
     </application>
 	<uses-permission android:name="android.permission.INTERNET" />
