--- a/LunchTodayApp/AndroidManifest.xml
+++ b/LunchTodayApp/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="se.lanzen.LunchToday"
-      android:versionCode="5" android:versionName="@string/version">
-    <application android:icon="@drawable/dagens_lunch" android:label="@string/app_name">
+      android:versionCode="7" android:versionName="@string/version">
+    <application android:icon="@drawable/ic_launcher" android:label="@string/app_name">
         <activity android:name=".ShowResturantsActivity"
                   android:label="@string/app_name">
             <intent-filter>
