--- a/LunchTodayApp/AndroidManifest.xml
+++ b/LunchTodayApp/AndroidManifest.xml
@@ -19,9 +19,15 @@
         <activity android:name=".PrefAreaActivity" 
         		  android:label="@string/app_name">
         </activity>
-
+        <activity android:name=".ResturantMap" 
+        		  android:label="@string/app_name">
+        </activity>
+        <uses-library android:required="true" android:name="com.google.android.maps"></uses-library>
+        
     </application>
 	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-sdk android:targetSdkVersion="7" android:minSdkVersion="7"></uses-sdk>
 
 
