--- a/LunchTodayApp/AndroidManifest.xml
+++ b/LunchTodayApp/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="se.lanzen.LunchToday"
-      android:versionCode="10" android:versionName="@string/version">
-    <application android:icon="@drawable/ic_launcher" android:label="@string/app_name">
+      android:versionCode="11" android:versionName="@string/version">
+    <application 
+        android:icon="@drawable/ic_launcher" 
+        android:label="@string/app_name"
+        android:allowBackup="true">
         <activity android:name=".ShowResturantsActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -24,10 +27,10 @@
         </activity>
         <uses-library android:required="true" android:name="com.google.android.maps"></uses-library>
         
-    </application>
-	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-	<uses-sdk android:targetSdkVersion="7" android:minSdkVersion="7"></uses-sdk>
+        </application>
+		<uses-permission android:name="android.permission.INTERNET" />
+		<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+		<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    	<uses-sdk android:targetSdkVersion="7" android:minSdkVersion="7"></uses-sdk>
 </manifest>
   
