--- a/LunchTodayApp/app/src/main/AndroidManifest.xml
+++ b/LunchTodayApp/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         </application>
 		<uses-permission android:name="android.permission.INTERNET" />
 		<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-		<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+        <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     	<uses-sdk android:targetSdkVersion="7" android:minSdkVersion="7"></uses-sdk>
 </manifest>
   
